--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebContent/index.jsp=UTF-8
+encoding//WebContent/resource/css/comm.css=UTF-8
+encoding//WebContent/resource/css/index.css=UTF-8
 encoding/<project>=UTF-8
 separateDerivedEncodings=true
