文件上传 基本实现  暂未解决小问题 文件大于2w不能上传 下一步 写发布action

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//WebContent/index.jsp=UTF-8
 encoding//WebContent/resource/css/comm.css=UTF-8
 encoding//WebContent/resource/css/index.css=UTF-8
 encoding/<project>=UTF-8
+encoding/WebContent=UTF-8
 separateDerivedEncodings=true
